<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_task">My Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">do something</string>
    <string name="add_taskBtn">ADD TASK</string>
    <string name="total_tasks_0">Total Tasks : 0</string>
    <string name="all_tasks_2">All Tasks</string>
    <string name="back">Back</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO</string>
    <string name="potatofighter">potatofighter</string>
    <string name="page_title">Page Title</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="coolpotato">coolpotato</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="angry_potato">Angry Potato</string>
    <string name="potato_king">Potato King</string>
    <string name="sad_potato">Sad Potato</string>
    <string name="choose_your_potato">Choose Your Potato</string>
    <string name="settings">Settings</string>
    <string name="go_to_settings">Go to Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>